--- a/style.css
+++ b/style.css
@@ -48,14 +48,14 @@ html {
 }
 
 body {
-    font: 400 1rem 'DM Sans', sans-serif;
+    font: 400 1rem var(--body-font);
     color: var(--text-color);
     background: var(--body-color);
     -webkit-font-smoothing: antialiased;
 }
 
 .title {
-    font: 700 1.875rem 'Poppins', sans-serif;
+    font: 700 var(--title-font-size) var(--title-font);
     color: var(--title-color);
     -webkit-font-smoothing: auto;
 }
@@ -68,7 +68,7 @@ body {
     align-items: center;
     padding: 0 2rem;
     border-radius: 0.25rem;
-    font: 500 1rem 'DM Sans', sans-serif;
+    font: 500 1rem var(--body-font);
     transition: background 0.3s;
 }
 
@@ -107,11 +107,15 @@ body {
 }
 
 .section {
-    padding: 5rem 0;
+    padding: calc(5rem + var(--header-height)) 0;
 }
 
 .section .title {
     margin-bottom: 1rem;
+}
+
+.section .subtitle {
+    font-size: var(--subtitle-font-size);
 }
 
 .section header {
@@ -140,19 +144,20 @@ body {
     box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15);
   }
 
-main {
-    margin-top: calc(var(--header-height) + 2rem); 
-    /*calc faz soma 2rem = 32px*/
-}
+
 
 /*================= LOGO ==============================*/
 .logo {
-    font: 700 1.31rem 'Poppins', sans-serif;
+    font: 700 1.31rem var(--title-font);
     color: var(--title-color);
 } 
 
 .logo span {
     color: var(--base-color);
+}
+
+.logo-alt span {
+    color: var(--body-color);
 }
 
 /*================= NAVIGATION ==============================*/
@@ -174,8 +179,9 @@ nav ul li a {
     position: relative;
 }
 
-nav ul li a:hover {
-    color: var(--base-color);
+nav ul li a:hover,
+nav ul li a.active {
+    color: var(--base-color);    
 }
 
 /* faz uma borda nos menus */
@@ -192,7 +198,8 @@ nav ul li a::after {
     transition: width 0.2s;
 }
 
-nav ul li a:hover::after {
+nav ul li a:hover::after,
+nav ul li a.active::after { /* faz a linha de baixo do menu*/
     width: 100%;
 }
 
@@ -467,3 +474,209 @@ nav.show div.icon-close {
   #contact ul li i {
     color: var(--base-color);
   }
+
+  
+/*====  FOOTER ============================ */
+footer {
+    background: var(--base-color);
+}
+
+footer.section {
+    padding: 4rem 0;
+}
+
+footer .logo {
+    /*ta a de padrão é display inline*/
+    display: inline-block;
+    margin-bottom: 1.5rem;
+}
+
+footer .brand p {
+    color: var(--text-color-light);
+    margin-bottom: 0.75rem;
+}
+
+footer i {
+    font-size: 1.5rem;
+    color: var(--text-color-light);
+}
+
+footer .social a {
+    margin-right: 2rem;
+    transition: 0.3s;
+    display: inline-block;
+}
+
+footer .social a:hover {
+    transform: translatey(-8px);
+}
+
+
+/* Back to top */
+.back-to-top {
+    background: var(--base-color);
+    color: var(--text-color-light);
+
+    position: fixed;
+    right: 1rem;
+    bottom: 1rem;
+
+    padding: 1rem;
+    clip-path: circle();
+
+    font-size: 1.5rem;
+    line-height: 0;
+
+    visibility: hidden;
+    opacity: 0;
+
+    transition: 0.3s;
+
+    /* deixa o botão pra fora da tela */
+    transform: translateY(100%);
+}
+
+.back-to-top.show {
+    visibility: visible;
+    opacity: 1;
+
+    /* traz o botão pra dentro da tela */
+    transform: translateY(0);
+
+}
+
+/* Responsivo */
+/* =========================== MEDIA QUERIES ================================*/
+/* estra large devices: maior que 1200 > */
+/* resusable classes */
+@media (min-width: 1200px) { /* Largura minima 1200px */
+    .container {
+        max-width: 1120px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .section {
+        padding: 10rem 0;
+    }
+
+    .section header,
+    #testimonials header {
+       max-width: 32rem;
+       text-align: center;
+       margin-left: auto;
+       margin-right: auto; 
+    }
+
+    .button {
+        height: 3.125rem;
+    }
+
+    /* navigation */
+    nav .menu {
+        opacity: 1;
+        visibility: visible;
+        top: 0;
+    }
+
+    /* os menus fica um ao lado do outro */
+    nav .menu ul {
+        display: flex;
+        gap: 2rem; /* espaco entre eles ex: inicio sobre serviços*/
+    }    
+
+    nav .menu ul li a.title {
+        font: 400 1rem var(--body-font);
+        -webkit-font-smoothing: antialiased;
+    }
+
+    nav .menu ul li a.title.active {
+        font-weight: bold;
+        -webkit-font-smoothing: auto;
+    }
+
+    /* menu amburg some */
+    nav .icon-menu {
+        display: none;
+    }
+
+    /* layout */
+
+    main {
+        margin-top: var(--header-height); 
+        /*calc faz soma 2rem = 32px*/
+    }
+
+    /* home */
+    /* um contianer ao lado do outro */
+    #home .container {
+        grid-auto-flow: column;
+        justify-content: space-between;
+        margin: 0 auto;
+    }
+
+    #home .image {
+        order: 1;
+    }
+
+    #home .text {
+        order: 0;
+        max-width: 24rem;
+        text-align: left;
+    }
+
+    /* about */
+    #about .container {
+        margin: 0 auto;
+        grid-auto-flow: column;
+    }
+
+    /* services */
+    .cards {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .card {
+        padding-left: 3rem;
+        padding-right: 3rem;
+    }
+
+    /* testimonials */
+    #testimonials .container {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    /* contact */
+    #contact .container {
+        grid-auto-flow: column; /*fica em colulars*/
+        align-items: center;
+    }
+
+    #contact .text {
+        max-width: 25rem;
+    }
+
+    /* footer */
+    footer.section {
+        padding: 3.75rem 0;
+    }
+
+    footer .container {
+        grid-auto-flow: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+ 
+}
+/* large devices: 1023 > */
+/* medium devices: 767 > */
+
+/* large devices: 992 > */
+@media (min-width: 992px) { /* Largura minima 992px */
+    :root {
+        --title-font-size: 2.25rem;
+        --subtitle-font-size: 1.125rem;
+    }
+
+}
